Home Panel Decoration

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 		</div>
 
 		<div class="tabPanel">
-			<img id="introimg"src="100APPLE/IMG_2287.jpg" alt="Personal Picture" >
+			<img id="introimg"src="IMG_2287.jpg" alt="Personal Picture" >
 			<h1>Hello!</h1>
 			<h1>My name is Bowen</span></h1>
 			<p id="changeText">Programmer</p>
+			<p id="description">Welcome to my personal website!</p>
 		</div>
 
 		<div class="tabPanel">Hi</div>
