--- a/index.html
+++ b/index.html
@@ -12,23 +12,49 @@
 		<div class="HoverButton">
 			<ul>
 				<li><a href="#"onclick="showPanel(0)">Home</a></li>
-				<li><a href="#" onclick="showPanel(1)">About</a></li>
+				<li><a href="#" onclick="showPanel(1)">About Me</a></li>
 				<li><a href="#" onclick="showPanel(2)">Resume</a></li>
 				<li><a href="#" onclick="showPanel(3)">Contact</a></li>
 			</ul>
 		</div>
 
 		<div class="tabPanel">
-			<img id="introimg"src="IMG_2287.jpg" alt="Personal Picture" >
+			<img id="introimg"src="Pic/IMG_2287.jpg" alt="Personal Picture" >
 			<h1>Hello!</h1>
 			<h1>My name is Bowen</span></h1>
 			<p id="changeText">Programmer</p>
 			<p id="description">Welcome to my personal website!</p>
 		</div>
 
-		<div class="tabPanel">Hi</div>
+		<div class="tabPanel">
+			<table>
+				<tr>
+					<td>Name: Bowen Wang</td>
+					<td>University: Rensselaer Polytechnic Institute</td>
+				</tr>
+				<tr>
+					<td>Majors: Computer Science and Chemical Engineering</td>
+					<td>Graduation Date: December 2019</td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>Location: New York City, New York</td>
+				</tr>
+			</table>
 
+
+			
+			<!--<ul>
+				<li>
+					<p>Name:Bowen Wang</p>
+					<p>University:Rensselaer Polytechnic Institute</p>
+					<p>Majors:Computer Science and Chemical Engineering</p>
+					<p>Expected Graduation Date:December 2019</p>
+					<p>Location:New York City, New York</p>
+				</li>
+			</ul>-->
 		</div>
+
 		<!--<div class="box">About Me: Content</div>
 		<div class="box">Resume: Content</div>
 		<div class="box">Contact: Content</div>-->
