--- a/index.html
+++ b/index.html
@@ -27,32 +27,24 @@
 		</div>
 
 		<div class="tabPanel">
-			<table>
-				<tr>
-					<td>Name: Bowen Wang</td>
-					<td>University: Rensselaer Polytechnic Institute</td>
-				</tr>
-				<tr>
-					<td>Majors: Computer Science and Chemical Engineering</td>
-					<td>Graduation Date: December 2019</td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>Location: New York City, New York</td>
-				</tr>
-			</table>
+			<img id="ProfPic" src="Pic/IMG_1804.jpg" alt="Professional Pic2">
+			<h1 id="JobNotice">I am currently seeking summer 2019 internship opportunity!
+			</h1>
 
+			<p class="AboutMe">
+				Hello! My name is Bowen Wang and I am a Computer Science and Chemical Engineering dual major at Rensselaer Polytechnic Institute. I started my journey into Computer Science in 2017 when I tried to take data structure for "fun." The 15-20 hours of coding definitely left a toll on my weekends, but I felt satisifed and driven by the development of projects from start to finish.
+			</p>
+			<p class="AboutMe">
+				I am currently working on the Rensselaer Open Source Project: Lazy Automatic Time Evaluator(LATE) and interesting functionalities for the website. The former is a automated task and assignments scheduler for RPI students, while the latter is a personal project to develop basic skills. Any recommendations and advices are welcomed! 
+			</p>
 
-			
-			<!--<ul>
-				<li>
-					<p>Name:Bowen Wang</p>
-					<p>University:Rensselaer Polytechnic Institute</p>
-					<p>Majors:Computer Science and Chemical Engineering</p>
-					<p>Expected Graduation Date:December 2019</p>
-					<p>Location:New York City, New York</p>
-				</li>
-			</ul>-->
+			<div>
+				<ul>
+					<li>
+						<a class="tip" target="_blank" href="resume.pdf" id="resume1">My Resume</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 
 		<!--<div class="box">About Me: Content</div>
