about me page update

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link rel="shortcut icon" href="">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
 	<div class="tabContainer">
@@ -27,23 +29,34 @@
 		</div>
 
 		<div class="tabPanel">
-			<img id="ProfPic" src="Pic/IMG_1804.jpg" alt="Professional Pic2">
+			<img id="ProfPic" src="Pic/IMG_4361.jpg" alt="Professional Pic2">
 			<h1 id="JobNotice">I am currently seeking summer 2019 internship opportunity!
 			</h1>
-
-			<p class="AboutMe">
-				Hello! My name is Bowen Wang and I am a Computer Science and Chemical Engineering dual major at Rensselaer Polytechnic Institute. I started my journey into Computer Science in 2017 when I tried to take data structure for "fun." The 15-20 hours of coding definitely left a toll on my weekends, but I felt satisifed and driven by the development of projects from start to finish.
-			</p>
-			<p class="AboutMe">
-				I am currently working on the Rensselaer Open Source Project: Lazy Automatic Time Evaluator(LATE) and interesting functionalities for the website. The former is a automated task and assignments scheduler for RPI students, while the latter is a personal project to develop basic skills. Any recommendations and advices are welcomed! 
-			</p>
-
-			<div>
-				<ul>
-					<li>
-						<a class="tip" target="_blank" href="resume.pdf" id="resume1">My Resume</a>
-					</li>
-				</ul>
+			<div class="textBox">
+				<p class="AboutMe">
+					Hello! My name is Bowen Wang and I am a Computer Science and Chemical Engineering dual major at Rensselaer Polytechnic Institute. I started my journey into Computer Science in 2017 when I tried to take data structure for "fun." The 15-20 hours of coding definitely left a toll on my weekends, but I felt satisifed and driven by the development of projects from start to finish.
+				</p>
+				<p class="AboutMe">
+					I am currently working on the Rensselaer Open Source Project: Lazy Automatic Time Evaluator(LATE) and exploring cool functions for this website. The former is an automated task and assignments scheduler for RPI students, while the latter is a personal project to develop basic skills. Any recommendations and advices are welcomed! 
+				</p>
+				<div class="buttonContainer">
+					<a class="btn btn-outline-primary" target="_blank" href="resume.pdf"><i class="">
+						<i class="fa fa-file-pdf-o"></i>
+						My Resume
+					</a>
+				</div>
+				<div class="buttonContainer">
+					<a class="btn btn-outline-primary" target="_blank" href="https://www.linkedin.com/in/bowen-wang-44b513131/"><i class="">
+						<i class="fa fa-linkedin-square"></i>
+						LinkedIn
+					</a>
+				</div>
+				<div class="buttonContainer">
+					<a class="btn btn-outline-primary" target="_blank" href="https://github.com/Apexal/late/tree/dashboard"><i class="">
+					<i class="fa fa-github-square"></i>
+						Github Project
+					</a>
+				</div>
 			</div>
 		</div>
 
@@ -51,6 +64,8 @@
 		<div class="box">Resume: Content</div>
 		<div class="box">Contact: Content</div>-->
 	</div>
+
+
 		
 
 
