--- a/index.html
+++ b/index.html
@@ -30,15 +30,18 @@
 
 		<div class="tabPanel">
 			<img id="ProfPic" src="Pic/IMG_4361.jpg" alt="Professional Pic2">
-			<h1 id="JobNotice">I am currently seeking summer 2019 internship opportunity!
-			</h1>
+			
 			<div class="textBox">
+				<h1 id="JobNotice">I am currently seeking summer 2019 internship opportunity!
+				</h1>
 				<p class="AboutMe">
 					Hello! My name is Bowen Wang and I am a Computer Science and Chemical Engineering dual major at Rensselaer Polytechnic Institute. I started my journey into Computer Science in 2017 when I tried to take data structure for "fun." The 15-20 hours of coding definitely left a toll on my weekends, but I felt satisifed and driven by the development of projects from start to finish.
 				</p>
 				<p class="AboutMe">
 					I am currently working on the Rensselaer Open Source Project: Lazy Automatic Time Evaluator(LATE) and exploring cool functions for this website. The former is an automated task and assignments scheduler for RPI students, while the latter is a personal project to develop basic skills. Any recommendations and advices are welcomed! 
 				</p>
+
+				<!--Links to external pages-->
 				<div class="buttonContainer">
 					<a class="btn btn-outline-primary" target="_blank" href="resume.pdf"><i class="">
 						<i class="fa fa-file-pdf-o"></i>
@@ -56,6 +59,10 @@
 					<i class="fa fa-github-square"></i>
 						Github Project
 					</a>
+				</div>
+				<!-- Fun Facts-->
+				<div class="FunFacts">
+					
 				</div>
 			</div>
 		</div>
