div name change

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					</a>
 				</div>
 				<!-- Fun Facts-->
-				<div class="FunFacts">
+				<div class="FunFactBox">
 					
 				</div>
 			</div>
