fadeIn fadeOut for panels

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	<div class="tabContainer">
 		<div>
 			<ul>
-				<li><a href="#"  class="HoverButton" tab="Home">Home</a></li>
-				<li><a href="#"  class="HoverButton" tab="AboutMe">About Me</a></li>
-				<li><a href="#"  class="HoverButton" tab="Resume">Resume</a></li>
-				<li><a href="#"  class="HoverButton" tab="Contact">Contact</a></li>
+				<li><a href="#"  class="HoverButton" tab="#HomePanel">Home</a></li>
+				<li><a href="#"  class="HoverButton" tab="#AboutMePanel">About Me</a></li>
+				<li><a href="#"  class="HoverButton" tab="#ResumePanel">Resume</a></li>
+				<li><a href="#"  class="HoverButton" tab="#ContactPanel">Contact</a></li>
 			</ul>
 		</div>
 
