--- a/index.html
+++ b/index.html
@@ -60,11 +60,14 @@
 						Github Project
 					</a>
 				</div>
+				<span class="FunFactBox">
+					<img src="Pic/FunFact_1.jpg" alt="FunFact#1" class="FunFactImage">
+					<img src="Pic/FunFact_1.jpg" alt="FunFact#1" class="FunFactImage">
+					<img src="Pic/FunFact_1.jpg" alt="FunFact#1" class="FunFactImage">
+				</span>
 				<!-- Fun Facts-->
-				<div class="FunFactBox">
-					
-				</div>
 			</div>
+			
 		</div>
 
 		<!--<div class="box">About Me: Content</div>
