Formating and hover effect for fun facts

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 				<h1 id="JobNotice">I am currently seeking summer 2019 internship opportunity!
 				</h1>
 				<p class="AboutMe">
-					Hello! My name is Bowen Wang and I am a Computer Science and Chemical Engineering dual major at Rensselaer Polytechnic Institute. I started my journey into Computer Science in 2017 when I tried to take data structure for "fun." The 15-20 hours of coding definitely left a toll on my weekends, but I felt satisifed and driven by the development of projects from start to finish.
+					Hello! My name is Bowen Wang and I am a junior Computer Science and Chemical Engineering dual majors at Rensselaer Polytechnic Institute. I started my journey into computer science in 2017 when I tried to take data structure for "fun." The 15-20 hours of coding definitely left a toll on my weekends, but I felt satisifed and driven by the development of projects from start to finish. The basics I learned from AP java was probably another factor which made the transition as smoothly as it did. 
 				</p>
 				<p class="AboutMe">
-					I am currently working on the Rensselaer Open Source Project: Lazy Automatic Time Evaluator(LATE) and exploring cool functions for this website. The former is an automated task and assignments scheduler for RPI students, while the latter is a personal project to develop basic skills. Any recommendations and advices are welcomed! 
+					I am currently working on the Rensselaer Open Source Project: Lazy Automatic Time Evaluator(LATE) and exploring new functions for this website. The former is an automated task and assignments scheduler for RPI students, while the latter is a personal project to develop basic skills. Any recommendations and advices are welcomed! 
 				</p>
 
 				<!--Links to external pages-->
@@ -60,19 +60,25 @@
 						Github Project
 					</a>
 				</div>
-				<span class="FunFactBox">
-					<img src="Pic/FunFact_1.jpg" alt="FunFact#1" class="FunFactImage">
-					<img src="Pic/FunFact_1.jpg" alt="FunFact#1" class="FunFactImage">
-					<img src="Pic/FunFact_1.jpg" alt="FunFact#1" class="FunFactImage">
-				</span>
+				<div class="FunFactBox">
+					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+   						<div class="hovereffect">
+        					<img class="img-responsive" src="Pic/FunFact_1.jpg" alt="">
+        					<div class="overlay">
+           						<h2>Hover effect 1</h2>
+        					</div>
+    					</div>
+					</div>
+				</div>
 				<!-- Fun Facts-->
 			</div>
 			
 		</div>
 
-		<!--<div class="box">About Me: Content</div>
-		<div class="box">Resume: Content</div>
-		<div class="box">Contact: Content</div>-->
+		<!--
+		<img src="Pic/IMG_3931.jpg" alt="FunFact#1" class="FunFactImage">
+		<img src="Pic/IMG_2980.jpg" alt="FunFact#1" class="FunFactImage">
+					-->
 	</div>
 
 
