--- a/index.html
+++ b/index.html
@@ -60,15 +60,31 @@
 						Github Project
 					</a>
 				</div>
-				<div class="FunFactBox">
-					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+				<div class="FunFactBox row">
+					<span class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
    						<div class="hovereffect">
         					<img class="img-responsive" src="Pic/FunFact_1.jpg" alt="">
         					<div class="overlay">
            						<h2>Hover effect 1</h2>
         					</div>
     					</div>
-					</div>
+					</span>
+					<span class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+   						<div class="hovereffect">
+        					<img class="img-responsive" src="Pic/IMG_3931.jpg" alt="">
+        					<div class="overlay">
+           						<h2>Hover effect 1</h2>
+        					</div>
+    					</div>
+					</span>
+					<span class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+   						<div class="hovereffect">
+        					<img class="img-responsive" src="Pic/IMG_2980.jpg" alt="">
+        					<div class="overlay">
+           						<h2>Hover effect 1</h2>
+        					</div>
+    					</div>
+					</span>
 				</div>
 				<!-- Fun Facts-->
 			</div>
