Hover Effect formatting and text update

--- a/index.html
+++ b/index.html
@@ -60,31 +60,43 @@
 						Github Project
 					</a>
 				</div>
+				<br>
+				<br>
 				<div class="FunFactBox row">
-					<span class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
    						<div class="hovereffect">
         					<img class="img-responsive" src="Pic/FunFact_1.jpg" alt="">
         					<div class="overlay">
-           						<h2>Hover effect 1</h2>
+        						<br>
+        						<br>
+           						<h1 class="hoverText">Lewis Coonley Award</h1>
+           						<br>
+           						<p class="hoverText">Best Senior Process Design of 2018</p>
         					</div>
     					</div>
-					</span>
-					<span class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+					</div>
+					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
    						<div class="hovereffect">
         					<img class="img-responsive" src="Pic/IMG_3931.jpg" alt="">
         					<div class="overlay">
-           						<h2>Hover effect 1</h2>
+								<br>
+        						<br>
+           						<h1 class="hoverText">Board Game Enthusiast</h1>
         					</div>
     					</div>
-					</span>
-					<span class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+					</div>
+					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
    						<div class="hovereffect">
         					<img class="img-responsive" src="Pic/IMG_2980.jpg" alt="">
         					<div class="overlay">
-           						<h2>Hover effect 1</h2>
+           						<br>
+        						<br>
+           						<h1 class="hoverText">Chemical Engineering Car</h1>
+           						<br>
+           						<p class="hoverText">3<sup>rd</sup> Place Northeastern Conference</p>
         					</div>
     					</div>
-					</span>
+					</div>
 				</div>
 				<!-- Fun Facts-->
 			</div>
