Fixed swapping between same panels

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<ul>
 				<li><a href="#"  class="HoverButton" tab="#HomePanel">Home</a></li>
 				<li><a href="#"  class="HoverButton" tab="#AboutMePanel">About Me</a></li>
-				<li><a href="#"  class="HoverButton" tab="#ResumePanel">Resume</a></li>
+				<li><a href="#"  class="HoverButton" tab="#ResumePanel">Experiences</a></li>
 				<li><a href="#"  class="HoverButton" tab="#ContactPanel">Contact</a></li>
 			</ul>
 		</div>
@@ -43,21 +43,27 @@
 
 				<!--Links to external pages-->
 				<div class="buttonContainer">
-					<a class="btn btn-outline-primary" target="_blank" href="resume.pdf"><i class="">
+					<a class="btn btn-outline-primary" target="_blank" href="resume.pdf">
 						<i class="fa fa-file-pdf-o"></i>
 						My Resume
 					</a>
 				</div>
 				<div class="buttonContainer">
-					<a class="btn btn-outline-primary" target="_blank" href="https://www.linkedin.com/in/bowen-wang-44b513131/"><i class="">
+					<a class="btn btn-outline-primary" target="_blank" href="https://www.linkedin.com/in/bowen-wang-44b513131/">
 						<i class="fa fa-linkedin-square"></i>
 						LinkedIn
 					</a>
 				</div>
 				<div class="buttonContainer">
-					<a class="btn btn-outline-primary" target="_blank" href="https://github.com/Apexal/late/tree/dashboard"><i class="">
+					<a class="btn btn-outline-primary" target="_blank" href="https://github.com/Apexal/late/tree/dashboard">
 					<i class="fa fa-github-square"></i>
 						Github Project
+					</a>
+				</div>
+				<div class="buttonContainer">
+					<a class="btn btn-outline-primary" target="_blank" href="https://www.facebook.com/bowen.wang.7">
+						<i class="fa fa-facebook-square"></i>
+						Facebook
 					</a>
 				</div>
 				<br>
@@ -99,6 +105,9 @@
 					</div>
 				</div>
 				<!-- Fun Facts-->
+			</div>
+			<div id="ExperiencesPanel">
+				
 			</div>
 			
 		</div>
