--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<ul>
 				<li><a href="#"  class="HoverButton" tab="#HomePanel">Home</a></li>
 				<li><a href="#"  class="HoverButton" tab="#AboutMePanel">About Me</a></li>
-				<li><a href="#"  class="HoverButton" tab="#ResumePanel">Experiences</a></li>
+				<li><a href="#"  class="HoverButton" tab="#ExperiencePanel">Experiences</a></li>
 				<li><a href="#"  class="HoverButton" tab="#ContactPanel">Contact</a></li>
 			</ul>
 		</div>
@@ -68,8 +68,9 @@
 				</div>
 				<br>
 				<br>
+				<h1>Fun Facts</h1>
 				<div class="FunFactBox row">
-					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+					<div class="col-lg-4">
    						<div class="hovereffect">
         					<img class="img-responsive" src="Pic/FunFact_1.jpg" alt="">
         					<div class="overlay">
@@ -81,7 +82,7 @@
         					</div>
     					</div>
 					</div>
-					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+					<div class="col-md-4">
    						<div class="hovereffect">
         					<img class="img-responsive" src="Pic/IMG_3931.jpg" alt="">
         					<div class="overlay">
@@ -91,7 +92,7 @@
         					</div>
     					</div>
 					</div>
-					<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+					<div class="col-md-4">
    						<div class="hovereffect">
         					<img class="img-responsive" src="Pic/IMG_2980.jpg" alt="">
         					<div class="overlay">
@@ -106,9 +107,8 @@
 				</div>
 				<!-- Fun Facts-->
 			</div>
-			<div id="ExperiencesPanel">
-				
-			</div>
+		</div>
+		<div id="ExperiencePanel">
 			
 		</div>
 
