Resume Panel Projects

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 			<ul>
 				<li><a href="#"  class="HoverButton" tab="#HomePanel">Home</a></li>
 				<li><a href="#"  class="HoverButton" tab="#AboutMePanel">About Me</a></li>
-				<li><a href="#"  class="HoverButton" tab="#ExperiencePanel">Experiences</a></li>
+				<li><a href="#"  class="HoverButton" tab="#ResumePanel">Resume</a></li>
 				<li><a href="#"  class="HoverButton" tab="#ContactPanel">Contact</a></li>
 			</ul>
 		</div>
+
 
 		<div id="HomePanel">
 			<img id="introimg"src="Pic/IMG_2287.jpg" alt="Personal Picture" >
@@ -108,8 +109,40 @@
 				<!-- Fun Facts-->
 			</div>
 		</div>
-		<div id="ExperiencePanel">
-			
+		<div id="ResumePanel">
+			<div class="row">
+	            <div class="col-sm-6 col-md -4">
+	            	<div class="ResumeSection">
+	            		<h1>Projects</h1>
+		            	<div class="ResumeTopic">RPI Open Source
+		            	</div>
+		            	<div class="ResumeLocation">Troy, NY | Fall 2018</div>
+		            	<p>Front-End Developer</p>
+		            	<br>
+		            	<div class="description">
+		            		•	Contributed to open source project of a weekly time scheduler for RPI students’ assignments, courses, and exams.
+							<br>
+							•	Updated project team and large group with weekly progress, hurdles, and goals. 
+							<br>
+							•	Designed and developed the website’s dashboard, about page in accordance with weekly meeting’s requirements. 
+						</div>
+		            </div>
+	            </div>
+	            <div class="col-sm-6 col-md -4">
+	            	<h1>Work Experiences</h1>
+	            	<p>asdasdasdasdasd</p>
+	            	<p>asdasdasdasdasd</p>
+	            	<p>asdasdasdasdasd</p>
+	            	<p>asdasdasdasdasd</p>
+	            </div>
+	            <div class="col-sm-6 col-md -4">
+	            	<h1>Summary</h1>
+	            	<p>asdasdasdasdasd</p>
+	            	<p>asdasdasdasdasd</p>
+	            	<p>asdasdasdasdasd</p>
+	            	<p>asdasdasdasdasd</p>
+	            </div>
+	        </div>
 		</div>
 
 		<!--
