Format fixes, updated project descriptions

--- a/index.html
+++ b/index.html
@@ -118,13 +118,23 @@
 		            	</div>
 		            	<div class="ResumeLocation">Troy, NY | Fall 2018</div>
 		            	<p>Front-End Developer</p>
-		            	<br>
 		            	<div class="description">
 		            		•	Contributed to open source project of a weekly time scheduler for RPI students’ assignments, courses, and exams.
 							<br>
 							•	Updated project team and large group with weekly progress, hurdles, and goals. 
 							<br>
 							•	Designed and developed the website’s dashboard, about page in accordance with weekly meeting’s requirements. 
+						</div>
+		            </div>
+		            <div class="ResumeSection">
+		            	<div class="ResumeTopic">Personal Website
+		            	</div>
+		            	<div class="ResumeLocation">Troy, NY | Fall 2018</div>
+		            	<p>Personal Project</p>
+		            	<div class="description">
+		            		•	Designed and developed a personal website with project references, resume, and self-introduction.
+		            		<br>
+							•	Incorporated interactive navigation bar for accessible traversal between various information panels and fun facts for others to view. 
 						</div>
 		            </div>
 	            </div>
