Fun Facts formatting

--- a/index.html
+++ b/index.html
@@ -71,12 +71,10 @@
 				<br>
 				<h1>Fun Facts</h1>
 				<div class="FunFactBox row">
-					<div class="col-lg-4">
+					<div class="col-md-4">
    						<div class="hovereffect">
         					<img class="img-responsive" src="Pic/FunFact_1.jpg" alt="">
         					<div class="overlay">
-        						<br>
-        						<br>
            						<h1 class="hoverText">Lewis Coonley Award</h1>
            						<br>
            						<p class="hoverText">Best Senior Process Design of 2018</p>
@@ -97,8 +95,6 @@
    						<div class="hovereffect">
         					<img class="img-responsive" src="Pic/IMG_2980.jpg" alt="">
         					<div class="overlay">
-           						<br>
-        						<br>
            						<h1 class="hoverText">Chemical Engineering Car</h1>
            						<br>
            						<p class="hoverText">3<sup>rd</sup> Place Northeastern Conference</p>
@@ -114,9 +110,9 @@
 	            <div class="col-sm-6 col-md -4">
 	            	<div class="ResumeSection">
 	            		<h1>Projects</h1>
-		            	<div class="ResumeTopic">RPI Open Source
-		            	</div>
+		            	<div class="ResumeTopic">RPI Open Source</div>
 		            	<div class="ResumeLocation">Troy, NY | Fall 2018</div>
+		            	<br>
 		            	<p>Front-End Developer</p>
 		            	<div class="description">
 		            		•	Contributed to open source project of a weekly time scheduler for RPI students’ assignments, courses, and exams.
@@ -130,6 +126,7 @@
 		            	<div class="ResumeTopic">Personal Website
 		            	</div>
 		            	<div class="ResumeLocation">Troy, NY | Fall 2018</div>
+		            	<br>
 		            	<p>Personal Project</p>
 		            	<div class="description">
 		            		•	Designed and developed a personal website with project references, resume, and self-introduction.
