Fun Facts formatting

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				</div>
 				<br>
 				<br>
-				<h1>Fun Facts</h1>
+				<h1 id="FunFactH1">Fun Facts</h1>
 				<div class="FunFactBox row">
 					<div class="col-md-4">
    						<div class="hovereffect">
@@ -102,9 +102,10 @@
     					</div>
 					</div>
 				</div>
-				<!-- Fun Facts-->
 			</div>
 		</div>
+
+		<!-- Resume Panel----------------------------------------------------------------->
 		<div id="ResumePanel">
 			<div class="row">
 	            <div class="col-sm-6 col-md -4">
@@ -151,11 +152,6 @@
 	            </div>
 	        </div>
 		</div>
-
-		<!--
-		<img src="Pic/IMG_3931.jpg" alt="FunFact#1" class="FunFactImage">
-		<img src="Pic/IMG_2980.jpg" alt="FunFact#1" class="FunFactImage">
-					-->
 	</div>
 
 
