new resume texts

--- a/index.html
+++ b/index.html
@@ -111,28 +111,45 @@
 	            <div class="col-sm-6 col-md -4">
 	            	<div class="ResumeSection">
 	            		<h1>Projects</h1>
-		            	<div class="ResumeTopic">RPI Open Source</div>
-		            	<div class="ResumeLocation">Troy, NY | Fall 2018</div>
-		            	<br>
-		            	<p>Front-End Developer</p>
+		            	<div class="ResumeTopic">
+		            		<span>RPI Open Source</span>
+			            	<p>Front-End Developer</p>
+			            </div>
+		            	<div class="ResumeLocation">
+		            		<span>Troy, NY | Fall 2018</span>
+		            	</div>
+		            	
 		            	<div class="description">
-		            		•	Contributed to open source project of a weekly time scheduler for RPI students’ assignments, courses, and exams.
-							<br>
 							•	Updated project team and large group with weekly progress, hurdles, and goals. 
 							<br>
 							•	Designed and developed the website’s dashboard, about page in accordance with weekly meeting’s requirements. 
 						</div>
 		            </div>
 		            <div class="ResumeSection">
-		            	<div class="ResumeTopic">Personal Website
+		            	<div class="ResumeTopic">
+		            		<span>Personal Website</span>
+		            		<br>
+		            		<p>Personal Project</p>
 		            	</div>
 		            	<div class="ResumeLocation">Troy, NY | Fall 2018</div>
-		            	<br>
-		            	<p>Personal Project</p>
 		            	<div class="description">
 		            		•	Designed and developed a personal website with project references, resume, and self-introduction.
 		            		<br>
 							•	Incorporated interactive navigation bar for accessible traversal between various information panels and fun facts for others to view. 
+						</div>
+		            </div>
+		            <div class="ResumeSection">
+		            	<div class="ResumeTopic">
+		            		<span>Chemical Engineering Car Club </span>
+		            		<br>
+		            		<p>Lab Leader</p>
+		            	</div>
+		            	<div class="ResumeLocation">Troy, NY | Fall 16 – May 18 </div>
+		            	<div class="description">
+		            		•	Placed 3rd in the Northeastern AIChE Conference out of 12 teams and competed in National Conference 2017.
+		            		<br>
+							•	Shortened car setup procedures by 36.8% and developed secondary containment system for the competition car.
+
 						</div>
 		            </div>
 	            </div>
