Work experiences update

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<div class="tabContainer">
@@ -44,6 +46,12 @@
 
 				<!--Links to external pages-->
 				<div class="buttonContainer">
+					<a class="btn btn-outline-primary" target="_blank" href="https://github.com/Apexal/late/tree/dashboard">
+					<i class="fa fa-file-text"></i>
+						Resume
+					</a>
+				</div>
+				<div class="buttonContainer">
 					<a class="btn btn-outline-primary" target="_blank" href="https://www.linkedin.com/in/bowen-wang-44b513131/">
 						<i class="fa fa-linkedin-square"></i>
 						LinkedIn
@@ -69,8 +77,10 @@
    						<div class="hovereffect">
         					<img class="img-responsive" src="Pic/FunFact_1.jpg" alt="">
         					<div class="overlay">
+        						<br>
+        						<br>
            						<h1 class="hoverText">Lewis Coonley Award</h1>
-           						<br>
+
            						<p class="hoverText">Best Senior Process Design of 2018</p>
         					</div>
     					</div>
@@ -89,9 +99,10 @@
    						<div class="hovereffect">
         					<img class="img-responsive" src="Pic/IMG_2980.jpg" alt="">
         					<div class="overlay">
+        						<br>
+        						<br>
            						<h1 class="hoverText">Chemical Engineering Car</h1>
-           						<br>
-           						<p class="hoverText">3<sup>rd</sup> Place Northeastern Conference</p>
+           						<p class="hoverText">3<sup>rd</sup> Place Regional Conference</p>
         					</div>
     					</div>
 					</div>
@@ -137,7 +148,7 @@
 		            		<br>
 							•	Incorporated interactive navigation bar for accessible traversal between various information panels and fun facts for others to view. 
 						</div>
-						<div class="buttonContainer">
+						<div class="buttonContainer" style="text-align: center">
 							<a class="btn btn-outline-primary" target="_blank" href="https://github.com/wangbowen1401/Pweb">
 							<i class="fa fa-github-square"></i>
 							</a>
@@ -158,7 +169,7 @@
 		            </div>
 		            <div class="ResumeSection">
 		            	<div class="ResumeTopic">
-		            		<span>Chemical Engineering Car Club </span>
+		            		<span>ChemE Car Club </span>
 		            		<br>
 		            		<p>Lab Leader</p>
 		            	</div>
@@ -172,11 +183,30 @@
 		            </div>
 	            </div>
 	            <div class="col-md -4">
-	            	<h1>Work Experiences</h1>
-	            	<p>asdasdasdasdasd</p>
-	            	<p>asdasdasdasdasd</p>
-	            	<p>asdasdasdasdasd</p>
-	            	<p>asdasdasdasdasd</p>
+	            	<div class="ResumeSection">
+	            		<h1>Work Experiences</h1>
+		            	<div class="ResumeTopic">
+		            		<span>Praxair, Inc.</span>
+			            	<p>Global Supply System Intern</p>
+			            </div>
+		            	<div class="ResumeLocation">
+		            		<span>Tonawanda, NY | Summer 2018</span>
+		            	</div>
+		            	
+		            	<div class="description">
+							•	Reinvented compressor selection interface to minimize product line selection tool prediction discrepancy to 3%. 
+							<br>
+							•	Analyzed ambient conditions prediction tool to further minimize prediction discrepancies for internal use.
+							<br>
+							•	Ensured proper operation of over 20 plant sites through examination of real-time process indicator database.
+
+						</div>
+						<div class="buttonContainer">
+							<a class="btn btn-outline-primary" target="_blank" href="https://github.com/Apexal/late">
+							<i class="fa fa-github-square"></i>
+							</a>
+						</div>
+		            </div>
 	            </div>
 	            <div class="col-md -4">
 	            	<h1>Summary</h1>
