Skill bar animation trial, need more work experiences+ one more module for resume slide

--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
         						<br>
         						<br>
            						<h1 class="hoverText">Lewis Coonley Award</h1>
-
            						<p class="hoverText">Best Senior Process Design of 2018</p>
         					</div>
     					</div>
@@ -120,10 +119,6 @@
 		            		<span>RPI Open Source</span>
 			            	<p>Front-End Developer</p>
 			            </div>
-		            	<div class="ResumeLocation">
-		            		<span>Troy, NY | Fall 2018</span>
-		            	</div>
-		            	
 		            	<div class="description">
 							•	Updated project team and large group with weekly progress, hurdles, and goals. 
 							<br>
@@ -142,7 +137,6 @@
 		            		<br>
 		            		<p>Personal Project</p>
 		            	</div>
-		            	<div class="ResumeLocation">Troy, NY | Fall 2018</div>
 		            	<div class="description">
 		            		•	Designed and developed a personal website with project references, resume, and self-introduction.
 		            		<br>
@@ -155,6 +149,7 @@
 						</div>
 		            </div>
 		            <br>
+		            <!--
 		            <div class="ResumeSection">
 		            	<div class="ResumeTopic">Word Puzzle Generator
 		            	</div>
@@ -167,13 +162,13 @@
 							•	Incorporated interactive navigation bar for accessible traversal between various information panels and fun facts for others to view. 
 						</div>
 		            </div>
+		        	-->
 		            <div class="ResumeSection">
 		            	<div class="ResumeTopic">
 		            		<span>ChemE Car Club </span>
 		            		<br>
 		            		<p>Lab Leader</p>
 		            	</div>
-		            	<div class="ResumeLocation">Troy, NY | Fall 16 – May 18 </div>
 		            	<div class="description">
 		            		•	Placed 3rd in the Northeastern AIChE Conference out of 12 teams and competed in National Conference 2017.
 		            		<br>
@@ -189,31 +184,26 @@
 		            		<span>Praxair, Inc.</span>
 			            	<p>Global Supply System Intern</p>
 			            </div>
-		            	<div class="ResumeLocation">
-		            		<span>Tonawanda, NY | Summer 2018</span>
-		            	</div>
-		            	
 		            	<div class="description">
 							•	Reinvented compressor selection interface to minimize product line selection tool prediction discrepancy to 3%. 
-							<br>
-							•	Analyzed ambient conditions prediction tool to further minimize prediction discrepancies for internal use.
 							<br>
 							•	Ensured proper operation of over 20 plant sites through examination of real-time process indicator database.
 
 						</div>
-						<div class="buttonContainer">
-							<a class="btn btn-outline-primary" target="_blank" href="https://github.com/Apexal/late">
-							<i class="fa fa-github-square"></i>
-							</a>
-						</div>
 		            </div>
 	            </div>
 	            <div class="col-md -4">
-	            	<h1>Summary</h1>
-	            	<p>asdasdasdasdasd</p>
-	            	<p>asdasdasdasdasd</p>
-	            	<p>asdasdasdasdasd</p>
-	            	<p>asdasdasdasdasd</p>
+	            	<h1>Skills</h1>
+	            	<div class="skillbar clearfix " data-percent="30%">
+						<div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
+						<div class="skillbar-bar" style="background: #e67e22;"></div>
+						<div class="skill-bar-percent">30%</div>
+					</div> 
+					<div class="skillbar clearfix " data-percent="50%">
+						<div class="skillbar-title" style="background: #d35400;"><span>CSS3</span></div>
+						<div class="skillbar-bar" style="background: #e67e22;"></div>
+						<div class="skill-bar-percent">50%</div>
+					</div> 
 	            </div>
 	        </div>
 		</div>
