More skill bars

--- a/index.html
+++ b/index.html
@@ -194,15 +194,35 @@
 	            </div>
 	            <div class="col-md -4">
 	            	<h1>Skills</h1>
-	            	<div class="skillbar clearfix " data-percent="30%">
+	            	<div class="skillbar clearfix " data-percent="40%">
 						<div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
 						<div class="skillbar-bar" style="background: #e67e22;"></div>
-						<div class="skill-bar-percent">30%</div>
+						<div class="skill-bar-percent">Proficient</div>
 					</div> 
-					<div class="skillbar clearfix " data-percent="50%">
-						<div class="skillbar-title" style="background: #d35400;"><span>CSS3</span></div>
+					<div class="skillbar clearfix " data-percent="60%">
+						<div class="skillbar-title" style="background: black;"><span>CSS3</span></div>
 						<div class="skillbar-bar" style="background: #e67e22;"></div>
-						<div class="skill-bar-percent">50%</div>
+						<div class="skill-bar-percent">Proficient</div>
+					</div> 
+					<div class="skillbar clearfix " data-percent="60%">
+						<div class="skillbar-title" style="background: black;"><span>C++</span></div>
+						<div class="skillbar-bar" style="background: #e67e22;"></div>
+						<div class="skill-bar-percent">Proficient</div>
+					</div> 
+					<div class="skillbar clearfix " data-percent="60%">
+						<div class="skillbar-title" style="background: black;"><span>Java</span></div>
+						<div class="skillbar-bar" style="background: #e67e22;"></div>
+						<div class="skill-bar-percent">Proficient</div>
+					</div> 
+					<div class="skillbar clearfix " data-percent="60%">
+						<div class="skillbar-title" style="background: black;"><span>Python</span></div>
+						<div class="skillbar-bar" style="background: #e67e22;"></div>
+						<div class="skill-bar-percent">Proficient</div>
+					</div> 
+					<div class="skillbar clearfix " data-percent="60%">
+						<div class="skillbar-title" style="background: black;"><span>Matlab</span></div>
+						<div class="skillbar-bar" style="background: #e67e22;"></div>
+						<div class="skill-bar-percent">Proficient</div>
 					</div> 
 	            </div>
 	        </div>
