Skill bars completed, categorized, and skills set

--- a/index.html
+++ b/index.html
@@ -193,37 +193,44 @@
 		            </div>
 	            </div>
 	            <div class="col-md -4">
-	            	<h1>Skills</h1>
-	            	<div class="skillbar clearfix " data-percent="40%">
-						<div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
-						<div class="skillbar-bar" style="background: #e67e22;"></div>
-						<div class="skill-bar-percent">Proficient</div>
-					</div> 
-					<div class="skillbar clearfix " data-percent="60%">
-						<div class="skillbar-title" style="background: black;"><span>CSS3</span></div>
-						<div class="skillbar-bar" style="background: #e67e22;"></div>
-						<div class="skill-bar-percent">Proficient</div>
-					</div> 
-					<div class="skillbar clearfix " data-percent="60%">
-						<div class="skillbar-title" style="background: black;"><span>C++</span></div>
-						<div class="skillbar-bar" style="background: #e67e22;"></div>
-						<div class="skill-bar-percent">Proficient</div>
-					</div> 
-					<div class="skillbar clearfix " data-percent="60%">
-						<div class="skillbar-title" style="background: black;"><span>Java</span></div>
-						<div class="skillbar-bar" style="background: #e67e22;"></div>
-						<div class="skill-bar-percent">Proficient</div>
-					</div> 
-					<div class="skillbar clearfix " data-percent="60%">
-						<div class="skillbar-title" style="background: black;"><span>Python</span></div>
-						<div class="skillbar-bar" style="background: #e67e22;"></div>
-						<div class="skill-bar-percent">Proficient</div>
-					</div> 
-					<div class="skillbar clearfix " data-percent="60%">
-						<div class="skillbar-title" style="background: black;"><span>Matlab</span></div>
-						<div class="skillbar-bar" style="background: #e67e22;"></div>
-						<div class="skill-bar-percent">Proficient</div>
-					</div> 
+	            	<div class="ResumeSection">
+	            		<h1>Skills</h1>
+		            	<div class="skillbar clearfix " data-percent="80%">
+							<div class="skillbar-title" style="background: #d35400;"><span>C++</span></div>
+							<div class="skillbar-bar" style="background: #e67e22;"></div>
+							<div class="skill-bar-percent">Proficient</div>
+						</div> 
+						<div class="skillbar clearfix " data-percent="60%">
+							<div class="skillbar-title" style="background:#618685;"><span>Java</span></div>
+							<div class="skillbar-bar" style="background:#80ced6;"></div>
+							<div class="skill-bar-percent">Intermediate</div>
+						</div> 
+						<div class="skillbar clearfix " data-percent="80%">
+							<div class="skillbar-title" style="background:#754092;"><span>Matlab</span></div>
+							<div class="skillbar-bar" style="background:#ba9dc8;"></div>
+							<div class="skill-bar-percent">Proficient</div>
+						</div> 
+						<div class="skillbar clearfix " data-percent="55%">
+							<div class="skillbar-title" style="background:#47af47;"><span>Python</span></div>
+							<div class="skillbar-bar" style="background:#a9d8a2;"></div>
+							<div class="skill-bar-percent">Intermediate</div>
+						</div> 
+						<div class="skillbar clearfix " data-percent="65%">
+							<div class="skillbar-title" style="background:#445c93;"><span>HTML5</span></div>
+							<div class="skillbar-bar" style="background:#a2aac8;"></div>
+							<div class="skill-bar-percent">Advance</div>
+						</div> 
+						<div class="skillbar clearfix " data-percent="70%">
+							<div class="skillbar-title" style="background:#db5959;"><span>CSS3</span></div>
+							<div class="skillbar-bar" style="background:#f5aea8;"></div>
+							<div class="skill-bar-percent">Advance</div>
+						</div> 
+						<div class="skillbar clearfix " data-percent="60%">
+							<div class="skillbar-title" style="background:#dbaf59;"><span>JS</span></div>
+							<div class="skillbar-bar" style="background:#f1d6ab;"></div>
+							<div class="skill-bar-percent">Beginner</div>
+						</div> 
+	            	</div>
 	            </div>
 	        </div>
 		</div>
